Updated cursor (drag and drop not currently implemented)

--- a/asset/cis.css
+++ b/asset/cis.css
@@ -4,7 +4,8 @@
   height: 20px;
   text-align: center;
   background: white;
-  cursor: move;
+  /*cursor: move;*/
+  cursor: disabled;
   margin-top: 20px;
 }
 
