--- a/public/asset/cis.css
+++ b/public/asset/cis.css
@@ -6,6 +6,27 @@ See https://getbootstrap.com/docs/3.3/components/#navbar-fixed-top
 */
 /*body { padding-top: 70px; }*/
 
+
+html, body {
+  width: 100%;
+  height: 100%;
+}
+body {
+  overflow: hidden;
+}
+#editor {
+  background-color: hsl(189, 47%, 6%);
+  position: absolute;
+  font-family: "SourceCodePro",Helvetica,Arial,sans-serif;
+  top: 0;
+  left: 0;
+}
+#testing {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 .draggable {
   font: bold 20px sans-serif;
   width: 200px;
@@ -46,7 +67,7 @@ See https://getbootstrap.com/docs/3.3/components/#navbar-fixed-top
 
 #canvas-area {
   border: solid 1px black;
-  width:100%;
+  width: 100%;
   vertical-align: top;
 }
 
@@ -54,10 +75,15 @@ See https://getbootstrap.com/docs/3.3/components/#navbar-fixed-top
   z-index: 1001;
 }
 
+.no-whitespace {
+  margin: 0;
+  padding: 0;
+}
+
 
 .legend-fix { 
    border: none;
-   width:auto !important;
+   width: auto !important;
 }
 
 slider {
@@ -73,4 +99,15 @@ slider {
   width:auto !important;
   height:100% !important;
   border-bottom:none;
+}
+
+@font-face {
+  /* we want the svg version */
+  font-family: 'FontAwesomeSVG';
+  src: url('../node_modules/font-awesome/fonts/fontawesome-webfont.svg?v=4.0.3#fontawesomeregular') format('svg'),
+    url('../node_modules/font-awesome/fonts/fontawesome-webfont.eot?#iefix&v=4.0.3') format('embedded-opentype'),
+    url('../node_modules/font-awesome/fonts/fontawesome-webfont.woff?v=4.0.3') format('woff'),
+    url('../node_modules/font-awesome/fonts/fontawesome-webfont.ttf?v=4.0.3') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
